fixed mobile skill section overflow

--- a/src/App.css
+++ b/src/App.css
@@ -434,20 +434,37 @@ SKILLS STYLES
   padding: 5rem 0 5rem 0;
 }
 
+#skills > h3 {
+  margin-bottom: 2rem;
+}
+
 #skills > div {
-  display: flex;
+  display: grid;
   justify-content: center;
-  align-items: center;
-  margin: 3rem 0 3rem 0;
+  align-self: center;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+#skills > div > img {
+  margin: 0;
+  max-width: 7.5rem;
+  justify-self: center;
+  align-self: center;
+}
+
+@media (min-width: 768px) {
+  #skills > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3rem 0 3rem 0;
+  }
 }
 
 #skills > div > .fab {
   margin: 0 1rem 0 1rem;
   font-size: 3.18rem;
-}
-
-#skills > div > img {
-  margin: 0 1rem 0 1rem;
 }
 
 .fa-html5 {
